working with symlink rather than absolute paths

--- a/nb/0_compile_data.ipynb
+++ b/nb/0_compile_data.ipynb
@@ -58,8 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat_dir = '/Users/chahah/data/noah/noah2'\n",
-    "fema = aT.read(os.path.join(dat_dir, 'fema_cid.fsf_cenus_rainfall.csv'))"
+    "fema = aT.read('../dat/fema_cid.fsf_cenus_rainfall.csv')"
    ]
   },
   {
@@ -346,7 +345,7 @@
     }
    ],
    "source": [
-    "fema.write(os.path.join(dat_dir, 'noah2.v0.0.csv'), overwrite=True)"
+    "fema.write('../dat/noah2.v0.0.csv', overwrite=True)"
    ]
   },
   {
@@ -447,7 +446,7 @@
    "source": [
     "# remove non-participating entries\n",
     "fema = fema[~no_points]\n",
-    "fema.write(os.path.join(dat_dir, 'noah2.participants.v0.0.csv'), overwrite=True)"
+    "fema.write('../dat/noah2.participants.v0.0.csv', overwrite=True)"
    ]
   }
  ],
