examining urban versus rual communities

--- a/nb/_ruca.ipynb
+++ b/nb/_ruca.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,7 @@
     "mpl.rcParams['ytick.labelsize'] = 'x-large'\n",
     "mpl.rcParams['ytick.major.size'] = 5\n",
     "mpl.rcParams['ytick.major.width'] = 1.5\n",
-    "mpl.rcParams['legend.frameon'] = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mpl.rcParams['legend.frameon'] = False\n",
     "%matplotlib inline"
    ]
   },
@@ -60,17 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat_dir = '/Users/chahah/data/noah/noah2'\n",
-    "fema = aT.read(os.path.join(dat_dir, 'noah2.participants.v0.0.csv'))"
+    "fema = aT.read('../dat/noah2.participants.v0.0.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +69,44 @@
     "for col in fema.colnames: \n",
     "    if 's_c' in col and '_avg' not in col:\n",
     "        activities.append(col[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c310',\n",
+       " 'c320',\n",
+       " 'c330',\n",
+       " 'c340',\n",
+       " 'c350',\n",
+       " 'c360',\n",
+       " 'c370',\n",
+       " 'c410',\n",
+       " 'c420',\n",
+       " 'c430',\n",
+       " 'c440',\n",
+       " 'c450',\n",
+       " 'c510',\n",
+       " 'c520',\n",
+       " 'c530',\n",
+       " 'c540',\n",
+       " 'c610',\n",
+       " 'c620',\n",
+       " 'c630']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activities"
    ]
   },
   {
